syntax = "proto3";

/* >>
import "google/api/annotations.proto";
<< */

package CatalogIntegrationEvents;

option csharp_namespace="Microsoft.eShopOnContainers.Services.Catalog.API.IntegrationEvents.ProtoEvents";

message OrderStockItemProto {
  int32 product_id = 1;
  int32 units = 2;
}